formatted paragraph and added web.xml page

--- a/web/htmlPractice.html
+++ b/web/htmlPractice.html
@@ -11,6 +11,6 @@ and open the template in the editor.
     <body>
         <div>TODO write content</div>
         <h3>This is header 3</h3>
-        <p>Some text for a paragraph</p>
+        <p><i>Some text for a paragraph</i></p>
     </body>
 </html>
